--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/db.js"></script>
 </head>
 <body>
 <!-- HEADER -->    
