--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>myShop</title>
+
   <!--Mobile-->
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
@@ -23,12 +24,15 @@
   <meta name="description" content="java를 이용한 쇼핑몰 연습">
   <meta name="keywords" content="html, css, javascript, bootstrap, java">
   <meta name="author" content="wein Lee">
+
   <!--stylesheet -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css" integrity="sha512-i5VzKip7owqOGjb0YTF8MR2J9yBVO3FLHeazKzLp354XYTmKcqEU3UeFYUw82R8tV6JqxeATOfstCfpfPhbyEA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/root.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -36,84 +40,216 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/db.js"></script>
 </head>
 <body>
-<!-- HEADER -->    
-<header>
-   <div class="container-max">
-      <div class="row flex-column">
-        <nav class="top d-flex justify-content-between">
-            <ul class="nav">
-                <li><a href="#">login</a></li>
-                <li><a href="#">join us</a>
-                   <div class="msgbox">
-                       +10,000 P
-                   </div>
-                </li>
-                <li><a href="#">cart <span>0</span></a></li>
-                <li><a href="#">order</a></li>
-                <li class="mem"><a href="#">my page</a>
-                    <ul class="subnav">
-                        <li><a href="#">관심상품</a></li>
-                        <li><a href="#">주문조회</a></li>
-                        <li><a href="#">적립금</a></li>
-                        <li><a href="#">예치금</a></li>
-                        <li><a href="#">마이쿠폰</a></li>
-                        <li><a href="#">내가쓴글</a></li>
-                    </ul>
-                </li>
-                <li class="mem"><a href="#">community</a>
-                    <ul class="subnav">
-                        <li><a href="#">notice</a></li>
-                        <li><a href="#">q&a</a></li>
-                        <li><a href="#">review</a></li>
-                        <li><a href="#">event</a></li>
-                        <li><a href="#">자주묻는질문</a></li>
-                    </ul>
-                </li>
-            </ul>
 
-            <ul class="right-nav nav">
-                <li><a href="#" class="facebook"><i class="ri-facebook-fill"></i></a></li>
-                <li><a href="#" class="instagram"><i class="ri-instagram-line"></i></a></li>
-                <li><a href="#" class="kakao"><i class="ri-kakao-talk-fill"></i></a></li>
-                <li><a href="#" class="youtube"><i class="ri-youtube-fill"></i></a></li>
-                <li>
-                    <form name="searchform" class="searchform" id="searchform">
-                        <input type="search" name="search" class="search" placeholder="🤦‍♀️🤦‍♂️고퀄리티 쇼핑몰!👍👍">
-                        <button type="button" class="btn btn-link btn-search"><i class="ri-search-line"></i></button>
-                    </form>
-                </li>
-            </ul>
-        </nav>
-        <h1 class="brand">MY SHOPPING MALL</h1>
+    <!-- HEADER -->    
+    <header>
+    <div class="container-max">
+        <div class="row flex-column">
+            <nav class="top d-flex justify-content-between">
+                <ul class="nav">
+                    <li><a href="#">login</a></li>
+                    <li><a href="#">join us</a>
+                    <div class="msgbox">
+                        +10,000 P
+                    </div>
+                    </li>
+                    <li><a href="#">cart <span>0</span></a></li>
+                    <li><a href="#">order</a></li>
+                    <li class="mem"><a href="#">my page</a>
+                        <ul class="subnav">
+                            <li><a href="#">관심상품</a></li>
+                            <li><a href="#">주문조회</a></li>
+                            <li><a href="#">적립금</a></li>
+                            <li><a href="#">예치금</a></li>
+                            <li><a href="#">마이쿠폰</a></li>
+                            <li><a href="#">내가쓴글</a></li>
+                        </ul>
+                    </li>
+                    <li class="mem"><a href="#">community</a>
+                        <ul class="subnav">
+                            <li><a href="#">notice</a></li>
+                            <li><a href="#">q&a</a></li>
+                            <li><a href="#">review</a></li>
+                            <li><a href="#">event</a></li>
+                            <li><a href="#">자주묻는질문</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul class="right-nav nav">
+                    <li><a href="#" class="facebook"><i class="ri-facebook-fill"></i></a></li>
+                    <li><a href="#" class="instagram"><i class="ri-instagram-line"></i></a></li>
+                    <li><a href="#" class="kakao"><i class="ri-kakao-talk-fill"></i></a></li>
+                    <li><a href="#" class="youtube"><i class="ri-youtube-fill"></i></a></li>
+                    <li>
+                        <form name="searchform" class="searchform" id="searchform">
+                            <input type="search" name="search" class="search" placeholder="💖🌹고퀄리티 쇼핑몰!👍👍">
+                            <button type="button" class="btn btn-link btn-search"><i class="ri-search-line"></i></button>
+                        </form>
+                    </li>
+                </ul>
+            </nav>
+            <h1 class="brand">MY SHOPPING MALL</h1>
+            
+        </div>
+    </div>
+    <nav class="global border-top border-bottom">
+        <div class="container-max">
+            <div class="row justify-content-between">
+                <div class="category">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    <div class="category-subnav">
+                        <ul class="category-subnav-view">
+
+                        </ul>
+                        <ul class="global-nav-view">
+                            <li><a href="#">BEST리뷰</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Q&A</a></li>
+                            <li><a href="#">배송조회</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <ul class="nav pr-category justify-content-between">
+                    <li><a href="#">new</a></li>
+                    <li><a href="#">빅사이즈</a></li>
+                    <li><a href="#">원피스</a></li>
+                    <li><a href="#">아우터</a></li>
+                    <li><a href="#">상의</a></li>
+                    <li><a href="#">바지</a></li>
+                    <li><a href="#">new</a></li>
+                </ul>
+                <ul class="nav global-nav justify-content-between">
+                    <li><a href="#">BEST리뷰</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">QandA</a></li>
+                    <li><a href="#">배송조회</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    </header>
+
+    <!-- HERO -->
+    <div class="hero">
+        <div class="mySlick">
+        </div>
+    </div>
+
+    <!-- WHAT NEW -->
+    <section id="new" class="new">
+        <h1 class="section-title mt-5 pt-5 text-center">새로 들어온 상품</h1>
+        <p class="text-center mb-5">주목~ 금주에 새로 들어온 핫 템들 입니다.</p>
+        <div class="container">
+            <div class="row">
+                <!-- LOOP -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <a href="#" class="card-img">
+                            <img src="images/pd/017.jpg" class="card-img-top" alt="nothing">
+                        </a>
+                        <a href="#"><div class="card-body"></a>
+                            <h5 class="mt-4">OFFICE LOOK</h5>
+                            <p>센스있는 직장인 데일리룩</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /LOOP -->
+            </div>
+        </div>
+    </section>
+
+    <!-- LIST -->
+    <section id="list" class="list">
+        <h1 class="section-title mt-5 pt-5 text-center">베스트 핫템</h1>
+        <p class="text-center mb-5">가장 많이 팔린 베스트 상품들을 보세요.</p>
+        <div class="container">
+            <div class="row justify-content-center">
+                <a href="#" class="list-3">
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="12.1007" height="12.1007" class="list-color"/>
+                        <rect y="13.8521" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect y="27.8993" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="13.8521" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="27.8993" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="13.8521" y="13.8521" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="13.8521" y="27.8993" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="27.8993" y="13.8521" width="12.1007" height="12.1007" class="list-color"/>
+                        <rect x="27.8993" y="27.8993" width="12.1007" height="12.1007" class="list-color"/>
+                    </svg>
+                </a>
+                <a href="#" class="list-4">
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect y="10.2807" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect y="20.5613" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect y="31.0192" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="10.2807" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="20.5613" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="31.0192" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="10.2807" y="10.2807" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="10.2807" y="20.5613" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="10.2807" y="31.0192" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="20.5613" y="10.2807" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="31.0192" y="10.2807" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="20.5613" y="20.5613" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="20.5613" y="31.0192" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="31.0192" y="20.5613" width="8.9808" height="8.9808" class="list-act-color"/>
+                        <rect x="31.0192" y="31.0192" width="8.9808" height="8.9808" class="list-act-color"/>
+                    </svg>
+                </a>
+                <a href="#" class="list-5">
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="7.12812" height="7.12812" class="list-color"/>
+                        <rect y="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect y="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect y="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect y="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="8.15982" y="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="8.15982" y="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="8.15982" y="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="8.15982" y="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="16.3196" y="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="24.4795" y="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="32.8719" y="8.15982" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="16.3196" y="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="16.3196" y="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="16.3196" y="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="24.4795" y="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="32.8719" y="16.3196" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="24.4795" y="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="24.4795" y="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="32.8719" y="24.4795" width="7.12812" height="7.12812" class="list-color"/>
+                        <rect x="32.8719" y="32.8719" width="7.12812" height="7.12812" class="list-color"/>
+                    </svg>
+                </a>
+            </div>
+            <div class="row">
+                상품목록
+            </div>
+        </div>
+    </section>
+
+    <!-- SERVICE -->
+    <section id="service" class="service">
         
-      </div>
-   </div><!--/container-max-->
-   <nav class="global border-top border-bottom">
-      <div class="container-max">
-         <div class="row justify-content-between">
-            <a href="#" class="category"><i class="fa-solid fa-bars"></i></a>
-            <ul class="nav pr-category justify-content-between">
-                <li><a href="#">new</a></li>
-                <li><a href="#">빅사이즈</a></li>
-                <li><a href="#">원피스</a></li>
-                <li><a href="#">아우터</a></li>
-                <li><a href="#">상의</a></li>
-                <li><a href="#">바지</a></li>
-                <li><a href="#">new</a></li>
-            </ul>
-            <ul class="nav global-nav justify-content-between">
-                <li><a href="#">BEST리뷰</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">QandA</a></li>
-                <li><a href="#">배송조회</a></li>
-            </ul>
-         </div>
-      </div>
-   </nav>
-</header>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container">
+            <p class="text-center pt-3">Copyright &copy; ush's all right reserved. maked 2024.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
