list and detail works

--- a/list.html
+++ b/list.html
@@ -133,28 +133,27 @@
             </div>
         </div>
     </nav>
-</header>
+    </header>
 
     <!-- HERO -->
     <div class="hero">
-        <div class="mySlick">
+        <div class="list01">
+            <div class="container">
+                <h4>ICE PINK</h4>
+                <h1>VINTAGE PINK = 365</h1>
+                <p>개성있고 사랑스러운 디자인. 각각의 조각을 꺼내면 사랑스러운 하트 모양이 유니크한 핑크로 당신의 삶을 다채롭게 스타일링 하세요.</p>
+            </div>
         </div>
     </div>
 
-    <!-- WHAT NEW -->
-    <section id="new" class="new">
-        <h1 class="section-title mt-5 pt-5 text-center">새로 들어온 상품</h1>
-        <p class="text-center mb-5">주목~ 금주에 새로 들어온 핫 템들 입니다.</p>
-        <div class="container">
-            <div class="row" id="newpd">
-                <!-- LOOP --><!-- /LOOP -->
-            </div>
-        </div>
-    </section>
 
     <!-- LIST -->
+    <section class="list">
+
+    </section>
+
     <section id="list" class="list">
-        <h1 class="section-title mt-5 pt-5 text-center">베스트 핫템</h1>
+        <h1 class="section-title mt-5 pt-5 text-center">DRESS</h1>
         <p class="text-center mb-5">가장 많이 팔린 베스트 상품들을 보세요.</p>
         <div class="container">
             <ul class="nav border p-2 my-5 sort">
@@ -258,10 +257,25 @@
                 <!-- /LOOP -->
             </div>
         </div>
+        <div class="pgbox">
+            <ul class="pagination">
+                <li class="page-item disabled"><a href="#" class="page-link"><i class="ri-arrow-left-double-line"></i></a></li>
+                <li class="page-item disabled"><a href="#" class="page-link"><i class="ri-arrow-left-s-line"></i></a></li>
+                <li class="page-item"><a href="#" class="page-link">1</a></li>
+                <li class="page-item"><a href="#" class="page-link">2</a></li>
+                <li class="page-item"><a href="#" class="page-link">3</a></li>
+                <li class="page-item"><a href="#" class="page-link">4</a></li>
+                <li class="page-item active"><a href="#" class="page-link">5</a></li>
+                <li class="page-item"><a href="#" class="page-link">6</a></li>
+                <li class="page-item"><a href="#" class="page-link"><i class="ri-arrow-right-s-line"></i></a></li>
+                <li class="page-item"><a href="#" class="page-link"><i class="ri-arrow-right-double-line"></i></a></li>
+            </ul>
+        </div>
     </section>
 
-    <!-- SERVICE -->
-    <section id="service" class="service">
+
+     <!-- SERVICE -->
+     <section id="service" class="service">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
