--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <ul class="nav global-nav justify-content-between">
                     <li><a href="#">BEST리뷰</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="#">QandA</a></li>
+                    <li><a href="#">Q&A</a></li>
                     <li><a href="#">배송조회</a></li>
                 </ul>
             </div>
