--- a/detail.html
+++ b/detail.html
@@ -51,7 +51,7 @@
     <header>
         <div class="container-max">
             <div class="row">
-                <nav class="top d-flex justify-content-between">
+                <nav class="top d-md-flex d-none justify-content-between">
                     <ul class="nav">
                         <li><a href="#">login</a></li>
                         <li><a href="#">join us</a>
@@ -99,7 +99,7 @@
                 
             </div>
         </div>
-        <nav class="global border-top border-bottom">
+        <nav class="global">
             <div class="container-max">
                 <div class="row justify-content-between">
                     <div class="category">
@@ -128,7 +128,7 @@
                     <ul class="nav global-nav justify-content-between">
                         <li><a href="#">BEST리뷰</a></li>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">QandA</a></li>
+                        <li><a href="#">Q&A</a></li>
                         <li><a href="#">배송조회</a></li>
                     </ul>
                 </div>
@@ -163,70 +163,103 @@
                         <img src="images/pd/126.jpg" alt="006">
                     </div>
                 </div>
+
+                <!-- 상품정보 LOOP -->
                 <div class="col-md-6 pl-md-5 pr-list">
-                    <h1>링클프리 스트라이프 셔츠
-                        <span class="badge badge-primary">HOT</span>
-                        <span class="badge badge-danger">new</span>
-                    </h1>
-                    <p>구김적은 링클프리 5색상 [size S,M,L,XL]</p>
-                    <ul class="ul-pr-list">
-                        <li><label class="title-label">상품코드</label> P00103EEA</li>
-                        <li><label class="title-label">판매가</label> 30,900원</li>
-                        <li><label class="title-label">할인판매가</label> 24,700원</li>
-                        <li><label class="title-label">적립금</label> 247원</li>
-                        <li><label class="title-label">배송비</label> 3,000원 [<span>50,000원</span> 이상 구매시, <span>배송비 무료</span>]</li>
-                        <li class="line colors"><label>컬러 </label>
-                            <input type="radio" name="colors" id="black" value="검정">
-                            <label for="black" class="black"></label>
-                            <input type="radio" name="size" id="pink" value="핑크">
-                            <label for="pink" class="pink"></label>
-                            <input type="radio" name="size" id="navy" value="네이비">
-                            <label for="navy" class="navy"></label>
-                            <input type="radio" name="size" id="blue" value="파랑">
-                            <label for="blue" class="blue"></label>
-                            <input type="radio" name="size" id="beige" value="베이지">
-                            <label for="beige" class="beige"></label>
-                            <p class="selected">검정색</p>
-                        </li>
-                        <li class="line"><label class="title-label">사이즈 </label>
-                            <select class="size" name="size">
-                                <option value="xsmall">XS</option>
-                                <option value="small">S</option>
-                                <option value="medium" selected>M</option>
-                                <option value="large">L</option>
-                                <option value="xlarge">XL</option>
-                            </select>
-                        </li>
-                        <li class="line"><label>추가구성 </label>
-                            <select>
-                                <option>선택 안함</option>
-                                <option>니트 세트(+18,000원)</option>
-                            </select>
-                        </li>
-                    </ul>
-                    <div class="t-price">
-                        <ul class="add-opt">
-                            <li class="total-text"></li>
-                            <li class="addbox"></li>
-                            <li class="tomoney"></li>
+                    <form name="detail-form" method="post">
+                        <input type="hidden" name="prcode" id="prcode" value="P00103EEA">
+                        <input type="hidden" name="prprice" id="prprice" value="30900">
+                        <input type="hidden" name="reserves" id="reserves" value="247">
+                        <input type="hidden" name="delivery" id="delivery" value="3000">
+                        <input type="hidden" name="totalprice" id="totalprice">
+
+                        <h1>링클프리 스트라이프 셔츠
+                            <span class="badge badge-primary">HOT</span>
+                            <span class="badge badge-danger">new</span>
+                        </h1>
+                        <p>구김적은 링클프리 5색상 [size S,M,L,XL]</p>
+                        <ul class="ul-pr-list">
+                            <li><label class="title-label">상품코드</label> P00103EEA</li>
+                            <li><label class="title-label">판매가</label> 30,900원</li>
+                            <li><label class="title-label">할인판매가</label> 24,700원</li>
+                            <li><label class="title-label">적립금</label> 247원</li>
+                            <li><label class="title-label">배송비</label> 3,000원 [<span>50,000원</span> 이상 구매시, <span>배송비 무료</span>]</li>
+                            <li class="line colors"><label class="title-label">컬러 </label>
+                                <input type="radio" name="color" checked id="black" value="검정">
+                                <label for="black" class="black"></label>
+                                <input type="radio" name="color" id="pink" value="핑크">
+                                <label for="pink" class="pink"></label>
+                                <input type="radio" name="color" id="navy" value="네이비">
+                                <label for="navy" class="navy"></label>
+                                <input type="radio" name="color" id="blue" value="파랑">
+                                <label for="blue" class="blue"></label>
+                                <input type="radio" name="color" id="beige" value="베이지">
+                                <label for="beige" class="beige"></label>
+                                <p class="selected">검정색</p>
+                            </li>
+                            <li class="line"><label class="title-label">사이즈 </label>
+                                <select class="size" name="size">
+                                    <option value="xsmall">XS</option>
+                                    <option value="small">S</option>
+                                    <option value="medium" selected>M</option>
+                                    <option value="large">L</option>
+                                    <option value="xlarge">XL</option>
+                                </select>
+                            </li>
+
+                        <!-- 추가 구성 필요할 시 쓸 것
+                            <li class="line"><label>추가구성 </label>
+                                <select>
+                                    <option>선택 안함</option>
+                                    <option>니트 세트(+18,000원)</option>
+                                </select>
+                            </li>
+                         -->
                         </ul>
-                        <div class="totalmoney">
-                            총 상품금액(수량)  :  배송비 포함 <strong>27,700원</strong>(1개)
+                        <div class="t-price">
+                            <ul class="add-opt">
+                                <li class="total-text">
+
+                                </li>
+                                <li class="addbox d-flex align-items-center">
+                                    <label class="title-label">수량</label>
+                                    <div class="input-group mb-3 ㅢ-4">
+                                        <div class="input-group-prepend">
+                                            <button class="btn btn-outline-line" id="qdown" type="button">
+                                                <i class="fa-solid fa-chevron-down"></i>
+                                            </button>
+                                        </div>
+                                        <input type="number" class="quantity" id="quantity" name="quantity" value="1" readonly>
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-line" id="qup" type="button">
+                                                <i class="fa-solid fa-chevron-up"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="tomoney">
+
+                                </li>
+                            </ul>
+                            <div class="totalmoney">
+                                총 상품금액(수량)  :  <strong>27,700원</strong>(1개)
+                            </div>
+                            <div class="btnbox">
+                                <button type="button" class="btn btn-detail"><i class="ri-hand-heart-fill"></i> 주문하기</button>
+                                <button type="button" class="btn btn-line btn-left"><i class="ri-shopping-bag-3-line"></i> ADD TO CART</button>
+                                <button type="button" class="btn btn-line btn-right"><i class="ri-heart-fill"></i> WISH LIST</button>
+                            </div>
                         </div>
-                        <div class="btnbox">
-                            <button type="button" class="btn btn-detail">주문하기</button>
-                            <button type="button" class="btn btn-line">ADD TO CART</button>
-                            <button type="button" class="btn btn-line">WISH LIST</button>
-                        </div>
-                    </div>
+                    </form>
                 </div>
+                <!-- /상품정보 LOOP -->
+
             </div>
             <div class="row">
                 <img src="images/pd/121-01.jpg" alt="121-01">
                 <img src="images/pd/121-0.gif" alt="121-0">
                 <img src="images/pd/121-1.jpg" alt="121-1">
                 <img src="images/pd/121-2.jpg" alt="121-2">
-                <img src="images/pd/121-3" alt="121-3">
             </div>
         </div>
     </section>
