detail price works

--- a/detail.html
+++ b/detail.html
@@ -200,7 +200,7 @@
                             </li>
                             <li class="line"><label class="title-label">사이즈 </label>
                                 <select class="size" name="size" disabled>
-                                    <option>--- [필수] size 선택 ---</option>
+                                    <option value="">--- [필수] size 선택 ---</option>
                                     <option value="xsmall" data-size="5000">XS</option>
                                     <option value="small" data-size="0">S</option>
                                     <option value="medium" data-size="0">M</option>
