--- a/detail.html
+++ b/detail.html
@@ -524,7 +524,7 @@
         <a href="#"><i class="ri-arrow-down-s-line"></i></a>
     </div>
 
-    <div class="cartview">
+    <div class="cartview mcartview">
         <div class="cartin">
             <ul class="list-group">
                 <li class="list-group-item">
